--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,6 @@ add_executable(tests test_1.cpp)
 
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain CppArgumentsReader)
 
+include(CTest)
 include(Catch)
 catch_discover_tests(tests)
