--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
       uses: turtlebrowser/get-conan@main
       with:
         version: 1.50.0
+        
+    - name: Pull dependencies
+      run: conan install . --output-folder=build --build=missing
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
